--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Django==1.8.5
 django-extensions==1.5.7
+pydot==1.0.2
+pygraphviz==1.3.1
+pyparsing==1.5.7
 six==1.10.0
+Werkzeug==0.10.4
 wheel==0.24.0
