--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django==1.8.5
+django-easy-pjax==1.2.0
 django-extensions==1.5.7
+django-material==0.4.1
 pydot==1.0.2
 pygraphviz==1.3.1
 pyparsing==1.5.7
