--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+-e git://github.com/hersonls/djamin.git@80223aee9628af3656247bd8e46018cc392596f2#egg=djamin-master
 Django==1.8.5
 django-easy-pjax==1.2.0
 django-extensions==1.5.7
+django-jet==0.1.3
 django-material==0.4.1
-pydot==1.0.2
-pygraphviz==1.3.1
+django-reversion==1.9.3
+django-summernote==0.6.16
+Pillow==3.0.0
 pyparsing==1.5.7
 six==1.10.0
 Werkzeug==0.10.4
